# internetum

./: pyproject.toml  this.txt
features/: auth.feature  behave.ini  environment.py  helper.py  http_methods.feature  internetum.feature  request_inspection.feature  statuscodes.feature
features/steps/: assert_extensions.py  auth.py  http_methods.py  internetum.py  request_inspection.py  statuscodes.py
